# Delphi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Delphi/: discord_bot.py  run.py
Delphi/tests/: test_bot.py
delphi/: discord_bot.py  run.py
delphi/configs/: deployment.json  (+1 more)
discord_agent/: bot_log.jsonl  discord_bot.py  pyproject.toml  run.py
discord_agent/discord_agent/: discord_bot.py  memory.py  run.py  run_old.py
discord_agent/discord_agent/configs/: agent_deployments.json
discord_agent/discord_agent/knowledge_base/: github_kb.py
discord_agent/discord_agent/tools/: discordGITHUB.py
discord_agent/market_agents/: pyproject.toml
discord_agent/market_agents/economics/: econ_models.py
discord_agent/market_agents/environments/mechanisms/: discord.py
discord_agent/market_agents/market_agents/agents/personas/: persona.py
discord_agent/market_agents/market_agents/memory/: embedding.py  knowledge_base.py  memory.py  memory_config.yaml  setup_db.py
discord_agent/market_agents/memory/: document_processor.py  embedding.py  knowledge_base.py  memory.py  memory_config.yaml  setup_db.py  vector_search.py
discord_agent/market_agents/orchestrators/: discord_orchestrator.py
discord_agent/tests/: test_bot.py
discord_agent/tools/: discordSUMMARISER.py
market_agents/: pyproject.toml
market_agents/market_agents/environments/mechanisms/: discord.py
market_agents/market_agents/memory/: setup_db.py
market_agents/market_agents/orchestrators/: discord_orchestrator.py
market_agents/orchestrators/: discord_orchestrator.py
(+13 files in other folders)
